--- a/CompleteAPP/src/main/resources/templates/index.html
+++ b/CompleteAPP/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
     <a href="/authors" class="btn btn-primary">View Authors</a>
     <a href="/books" class="btn btn-primary">View Books</a>
     <a href="/publishers" class="btn btn-primary">View Publishers</a>
+    <a href="/teams" class="btn btn-primary">View Teams</a>
+    <a href="/workers" class="btn btn-primary">View Workers</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
