--- a/CompleteAPP/src/main/resources/templates/layout.html
+++ b/CompleteAPP/src/main/resources/templates/layout.html
@@ -24,6 +24,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/publishers">Publishers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/teams">Teams</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/workers">Workers</a>
+                </li>
             </ul>
         </div>
     </div>
