--- a/CompleteAPP/src/main/resources/templates/workers/worker.html
+++ b/CompleteAPP/src/main/resources/templates/workers/worker.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title layout:fragment="pageTitle">Team</title>
+    <title layout:fragment="pageTitle">Worker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 th:text="${team.name}"></h1>
+    <h1 th:text="${worker.name}"></h1>
     <br>
-    <h2>Trabajadores</h2>
+    <h2>Tareas</h2>
     <table class="table">
         <thead>
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Description</th>
+            <th>Date Opening</th>
+            <th>Date Ending</th>
+            <th>Type</th>
+            <th>Status</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="worker : ${workers}">
-            <td th:text="${worker.id}"></td>
-            <td th:text="${worker.name}" th:href="@{/worker/{id}(id=${worker.id})}"></td>
-            <td th:text="${worker.age}"></td>
+        <tr th:each="task : ${tasks}">
+            <td th:text="${task.id}"></td>
+            <td th:text="${task.name}" th:href="@{/task/{id}(id=${task.id})}"></td>
+            <td th:text="${task.description}"></td>
+            <td th:text="${task.dateOpening}"></td>
+            <td th:text="${task.dateEnding}"></td>
+            <td th:text="${task.type}"></td>
+            <td th:text="${task.status}"></td>
         </tr>
         </tbody>
     </table>
