--- a/CompleteAPP/src/main/resources/templates/index.html
+++ b/CompleteAPP/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     <a href="/publishers" class="btn btn-primary">View Publishers</a>
     <a href="/teams" class="btn btn-primary">View Teams</a>
     <a href="/workers" class="btn btn-primary">View Workers</a>
+    <a href="/tasks" class="btn btn-primary">View Tasks</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
