--- a/CompleteAPP/src/main/resources/templates/layout.html
+++ b/CompleteAPP/src/main/resources/templates/layout.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/workers">Workers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tasks">Tasks</a>
+                </li>
             </ul>
         </div>
     </div>
