--- a/CompleteAPP/src/main/resources/templates/tasks/form.html
+++ b/CompleteAPP/src/main/resources/templates/tasks/form.html
@@ -8,28 +8,58 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 th:text="${worker.id != null ? 'Edit Worker' : 'Create Worker'}"></h1>
-    <form th:action="@{/workers/save}" th:object="${worker}" method="post">
+    <h1 th:text="${task.id != null ? 'Edit Task' : 'Create Task'}"></h1>
+    <form th:action="@{/tasks/save}" th:object="${task}" method="post">
         <input type="hidden" th:field="*{id}"/>
         <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" id="name" class="form-control" th:field="*{name}" required>
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" th:field="*{name}" required>
+            <br>
+            <label for="description">Descripción:</label>
+            <textarea id="description" name="description" th:field="*{description}" required></textarea>
+            <br>
+            <label for="type">Tipo:</label>
+            <select id="type" name="type" th:field="*{type}">
+                <option th:if="${task.id == null}" value="MEJORA">Mejora</option>
+                <option th:if="${task.id == null}" value="BUG">Bug</option>
+                <option th:if="${task.id == null}" value="REFACTORIZACION">Refactorización</option>
 
-            <label for="age" class="form-label">Age</label>
-            <input type="text" id="age" class="form-control" th:field="*{age}" required>
-
-            <label for="team">Grupo de Trabajo:</label>
-            <select id="team" name="team">
-                <option th:if="${worker.id == null}" th:each="team : ${teams}" th:value="${team.id}" th:text="${team.name}"></option>
-                <option th:unless="${worker.id == null}" th:each="team : ${teams}"
-                        th:value="${team.id}"
-                        th:text="${team.name}"
-                        th:selected="${worker.team != null && team.id == worker.team.id}">
-                </option>
+                <option th:unless="${task.id == null}" value="MEJORA" th:selected="${task.type == 'MEJORA'}">Mejora</option>
+                <option th:unless="${task.id == null}" value="BUG" th:selected="${task.type == 'BUG'}">Bug</option>
+                <option th:unless="${task.id == null}" value="REFACTORIZACION" th:selected="${task.type == 'REFACTORIZACION'}">Refactorización</option>
             </select>
+            <br>
+            <label for="status">Estado:</label>
+            <select id="status" name="status" th:field="*{status}">
+                <option th:if="${task.id == null}" value="ABIERTA">Abierta</option>
+                <option th:if="${task.id == null}" value="EN_PROGRESO">En Progreso</option>
+                <option th:if="${task.id == null}" value="CERRADA">Cerrada</option>
+
+                <option th:unless="${task.id == null}" value="ABIERTA" th:selected="${task.status == 'ABIERTA'}">Abierta</option>
+                <option th:unless="${task.id == null}" value="EN_PROGRESO" th:selected="${task.status == 'EN_PROGRESO'}">En Progreso</option>
+                <option th:unless="${task.id == null}" value="CERRADA" th:selected="${task.status == 'CERRADA'}">Cerrada</option>
+            </select>
+            <br>
+            <label for="dateOpening">Fecha de Apertura:</label>
+            <input type="date" id="dateOpening" name="dateOpening" th:field="*{dateOpening}" required>
+            <br>
+            <label for="dateEnding">Fecha Planificada de Cierre:</label>
+            <input type="date" id="dateEnding" name="dateEnding" th:field="*{dateEnding}" required>
+            <br>
+            <label for="workers">Trabajadores Asignados:</label>
+            <div th:each="worker : ${workers}">
+                <input id="workers" type="checkbox" th:field="*{workers}" th:value="${worker.id}">
+                <span th:text="${worker.name}"></span>
+            </div>
+            <br>
+            <label for="team">Equipos Asignados:</label>
+            <div th:each="worker : ${workers}">
+                <input id="team" type="checkbox" th:field="*{team}" th:value="${worker.team.id}">
+                <span th:text="${worker.team.name}"></span>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
-        <a href="/workers" class="btn btn-secondary">Cancel</a>
+        <a href="/tasks" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
