--- a/CompleteAPP/src/main/resources/templates/tasks/task.html
+++ b/CompleteAPP/src/main/resources/templates/tasks/task.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 th:text="${worker.name}"></h1>
+    <h1 th:text="${task.name}"></h1>
     <br>
-    <h2>Tareas</h2>
+    <h2>Tarea</h2>
     <table class="table">
         <thead>
         <tr>
@@ -24,7 +24,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="task : ${tasks}">
+        <tr>
             <td th:text="${task.id}"></td>
             <td th:text="${task.name}" th:href="@{/task/{id}(id=${task.id})}"></td>
             <td th:text="${task.description}"></td>
