--- a/CompleteAPP/src/main/resources/templates/controlPanel/controlPanel.html
+++ b/CompleteAPP/src/main/resources/templates/controlPanel/controlPanel.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Welcome to the Library App</h1>
-    <p>This is the main page of the application.</p>
-    <a href="/authors" class="btn btn-primary">View Authors</a>
+    <h1>Filters</h1>
+    <br>
+    <a href="/controlPanel/tareasRetrasadas" class="btn btn-primary">Filter Overdue Tasks</a>
     <a href="/books" class="btn btn-primary">View Books</a>
     <a href="/publishers" class="btn btn-primary">View Publishers</a>
     <a href="/teams" class="btn btn-primary">View Teams</a>
