--- a/CompleteAPP/src/main/resources/templates/controlPanel/tareasRetrasadas.html
+++ b/CompleteAPP/src/main/resources/templates/controlPanel/tareasRetrasadas.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title layout:fragment="pageTitle">Publisher List</title>
+    <title layout:fragment="pageTitle">Main Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Publishers</h1>
-    <a href="/publishers/create" class="btn btn-success mb-3">Add New Publisher</a>
-    <table class="table table-striped">
+    <table>
         <thead>
         <tr>
-            <th>#</th>
             <th>Name</th>
-            <th>Actions</th>
+            <th>Descripción</th>
+            <th>Fecha Cierre</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="publisher : ${publishers}">
-            <td th:text="${publisher.id}"></td>
-            <td th:text="${publisher.name}"></td>
-            <td>
-                <a th:href="@{'/publishers/edit/' + ${publisher.id}}" class="btn btn-warning btn-sm">Edit</a>
-                <a th:href="@{'/publishers/delete/' + ${publisher.id}}" class="btn btn-danger btn-sm">Delete</a>
-            </td>
+        <tr th:each="tarea : ${tareasRetrasadas}">
+            <td th:text="${tarea.name}"></td>
+            <td th:text="${tarea.description}"></td>
+            <td th:text="${tarea.dateEnding}"></td>
         </tr>
         </tbody>
     </table>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
