--- a/CompleteAPP/src/main/resources/templates/index.html
+++ b/CompleteAPP/src/main/resources/templates/index.html
@@ -8,14 +8,11 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Welcome to the Library App</h1>
-    <p>This is the main page of the application.</p>
-    <a href="/authors" class="btn btn-primary">View Authors</a>
-    <a href="/books" class="btn btn-primary">View Books</a>
-    <a href="/publishers" class="btn btn-primary">View Publishers</a>
+    <h1>Welcome to the Web App</h1>
     <a href="/teams" class="btn btn-primary">View Teams</a>
     <a href="/workers" class="btn btn-primary">View Workers</a>
     <a href="/tasks" class="btn btn-primary">View Tasks</a>
+    <a href="/controlPanel" class="btn btn-primary">View Control Panel</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
