--- a/CompleteAPP/src/main/resources/templates/layout.html
+++ b/CompleteAPP/src/main/resources/templates/layout.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title layout:fragment="pageTitle">Library App</title>
+    <title layout:fragment="pageTitle">Web App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Library App</a>
+        <a class="navbar-brand" href="/">Web App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/authors">Authors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/books">Books</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/publishers">Publishers</a>
+                    <a class="nav-link" href="/controlPanel">Teams</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/teams">Teams</a>
