--- a/CompleteAPP/src/main/resources/templates/controlPanel/tareasRetrasadas.html
+++ b/CompleteAPP/src/main/resources/templates/controlPanel/tareasRetrasadas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <table>
+    <table class="table">
         <thead>
         <tr>
             <th>Name</th>
