--- a/CompleteAPP/src/main/resources/templates/layout.html
+++ b/CompleteAPP/src/main/resources/templates/layout.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/controlPanel">Teams</a>
+                    <a class="nav-link" href="/controlPanel">Control Panel</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/teams">Teams</a>
