--- a/CompleteAPP/src/main/resources/templates/controlPanel/controlPanel.html
+++ b/CompleteAPP/src/main/resources/templates/controlPanel/controlPanel.html
@@ -12,10 +12,9 @@
     <br>
     <a href="controlPanel/tareasRetrasadas" class="btn btn-primary">Filter Overdue Tasks</a>
     <a href="controlPanel/tareasEnCurso" class="btn btn-primary">Filter In progress Tasks</a>
-    <a href="/publishers" class="btn btn-primary">View Publishers</a>
-    <a href="/teams" class="btn btn-primary">View Teams</a>
-    <a href="/workers" class="btn btn-primary">View Workers</a>
-    <a href="/tasks" class="btn btn-primary">View Tasks</a>
+    <a href="controlPanel/tareasAbiertas" class="btn btn-primary">Filter Opened Tasks</a>
+    <a href="controlPanel/numeroDeTareas" class="btn btn-primary">Filter Number of Tasks</a>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
