--- a/CompleteAPP/src/main/resources/templates/controlPanel/tareasAbiertas.html
+++ b/CompleteAPP/src/main/resources/templates/controlPanel/tareasAbiertas.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title layout:fragment="pageTitle">Worker</title>
+    <title layout:fragment="pageTitle">Main Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 th:text="${worker.name}"></h1>
-    <br>
-    <h2>Tareas</h2>
+    <h1>Trabajadores con tareas abiertas ordenadas</h1>
     <table class="table">
         <thead>
         <tr>
